| Bug #32817 | though CSV is marked as supported create table is rejected with error 1005. | ||
|---|---|---|---|
| Submitted: | 28 Nov 2007 16:18 | Modified: | 4 Jan 11:56 |
| Reporter: | Horst Hunger | ||
| Status: | Closed | ||
| Category: | Server: CSV | Severity: | S1 (Critical) |
| Version: | 5.1.23-rc | OS: | Linux (suse 10.1) |
| Assigned to: | Sergey Vojtovich | Target Version: | 5.1.23 |
| Triage: | D1 (Critical) | ||
[28 Nov 2007 16:18]
Horst Hunger
[28 Nov 2007 16:54]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[28 Nov 2007 21:02]
Sergey Vojtovich
See also BUG#31473 and BUG#32050. With fix for BUG#31473 it is not possible to create CSV table with nullable field, but the error message is definitly far from perfect.
[30 Nov 2007 13:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/38954 ChangeSet@1.2673, 2007-11-30 16:19:09+04:00, svoj@mysql.com +3 -0 BUG#32817 - though CSV is marked as supported create table is rejected with error 1005. CSV doesn't support nullable fields. Report a warning if create table with nullable field is requested.
[6 Dec 2007 14:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/39409 ChangeSet@1.2677, 2007-12-06 17:40:40+04:00, svoj@mysql.com +3 -0 BUG#32817 - though CSV is marked as supported create table is rejected with error 1005. CSV doesn't support nullable fields. Report descriptive error if create table with nullable field is requested.
[7 Dec 2007 11:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/39510 ChangeSet@1.2677, 2007-12-07 14:44:03+04:00, svoj@mysql.com +3 -0 BUG#32817 - though CSV is marked as supported create table is rejected with error 1005. CSV doesn't support nullable fields. Report descriptive error if create table with nullable field is requested.
[13 Dec 2007 0:00]
Bugs System
Pushed into 6.0.5-alpha
[13 Dec 2007 0:02]
Bugs System
Pushed into 5.1.23-rc
[4 Jan 11:56]
MC Brown
A note has been added to the 6.0.5 and 5.1.23 changelogs: Incompatible Change: Inserting a row with a NULL value for a DATETIME column results in a CSV file that the storage engine cannot read. All CSV tables now need to be defined with each column marked as NOT NULL. An error is raised if you try to create a CSV table with columns that are not defined with NOT NULL.
