BUG#32817 - though CSV is marked as supported create table is rejected             with error 1005.

CSV doesn't support nullable fields. Report descriptive error if create
table with nullable field is requested.